--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ strip = true      # Strip binary
 clap = {version = "4.3.4", features = ["cargo", "derive"]}
 colored = {version = "2.0.0", optional = true}
 colored_json = {version = "5.0.0", optional = true}
+compress-tools = {version = "0.15.1", optional = true}
 either = "1.8.1"
 glob = "0.3.1"
 goblin = "0.7.1"
@@ -67,6 +68,7 @@ name = "checksec"
 path = "src/main.rs"
 
 [features]
+archives = ["compress-tools"]
 color = ["colored", "colored_json", "xattr"]
 default = ["elf", "macho", "pe", "color", "maps", "disassembly"]
 disassembly = ["iced-x86"]
