Rework command line interface
Use subcommand instead of option arguments. This has the benefit of
supporting shell wildcards.

Old usage:

    checksec -f /bin/true --no-color
    checksec -d /bin --json --pretty
    checksec -p bash --maps
    checksec --pid 1,42
    checksec -P

New usage:

    checksec --no-color file /bin/true
    checksec --format json-pretty exe /bin
    checksec proc-name --maps bash
    checksec proc-id 1 42
    checksec proc-all

    checksec proc-id $(pidof firefox)
    checksec file /bin/system*
    dpkg -L apt | checksec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ opt-level = 'z'   # Optimize for size
 panic = 'abort'   # Abort on panic
 
 [dependencies]
-clap = {version = "4.3.4", features = ["cargo"]}
+clap = {version = "4.3.4", features = ["cargo", "derive"]}
 colored = {version = "2.0.0", optional = true}
 colored_json = {version = "5.0.0", optional = true}
 either = "1.8.1"
