--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ version = "0.0.9"
 [profile.release]
 codegen-units = 1 # Reduce number of codegen units to increase optimizations
 lto = true        # Enable Link Time Optimization
-opt-level = 'z'   # Optimize for size
+#opt-level = 'z'   # Optimize for size
 panic = 'abort'   # Abort on panic
+strip = true      # Strip binary
 
 [dependencies]
 clap = {version = "4.3.4", features = ["cargo", "derive"]}
